# research-mlx-ui

./: .gitignore  CLAUDE.md  LICENSE  README.md  prepare.py  pyproject.toml  results.tsv  start.sh  train.py
.claude/skills/bugfix/: SKILL.md
client/: package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/Dashboard/: ExperimentChart.jsx  index.jsx
client/src/components/History/: index.jsx
client/src/components/Results/: index.jsx
client/src/components/SetupWizard/: index.jsx
client/src/hooks/: useExperiments.js  useWebSocket.js
docs/: HANDOFF.md
plans/: implementation-plan.md
server/: git_watcher.py  hardware.py  main.py  process_manager.py  program_generator.py  project_manager.py  summarizer.py
