[project]
name = "research-mlx-ui"
version = "0.1.0"
description = "Karpathy's autoresearch for Apple Silicon: MLX + Muon + web UI"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.27.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "tiktoken>=0.6.0",
    "numpy>=1.26.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "tokenizers>=0.22.2",
    "datasets>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
